# latent-structure-benchmark

./: .env.example  .gitignore  .gitleaks.toml  ARCHITECTURE.md  CLAUDE.md  DESIGN_SYSTEM.md  HOSTING_AND_DEV_OPS.md  LICENSE  LICENSE-DATA  LICENSE-OPENBUNDLE  LICENSE-PROMPTS  PHASE_0_TASKS.md  PHASE_4C_CANDIDATE_SOURCES.md  README.md  SECURITY.md  SECURITY_AND_HARDENING.md  main.py  orchestrator.py  pyproject.toml  slack_helper.py  task_manager.py  task_queue.json  test_slack.py
.claude/: settings.json  settings.local.json
.claude/agents/: architect.md  cda_sme.md  coder.md  reviewer.md  tester.md  ui_ux.md
.claude/hooks/: check_forbidden_vocab.py  check_informants_append_only.py  check_schema_edit.py  check_spend_gate.py
.claude/workflows/: lsb-pipeline.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  social-pipeline.yml
apps/dashboard/: index.html  package-lock.json  package.json  vite.config.ts  wrangler.toml
apps/ops_dashboard/: README.md  app.py  pyproject.toml
apps/ops_dashboard/lib/: __init__.py  detail.py  loader.py  picker.py  qa_interpreter.py
data/derived/: decline_interviews_confabulation_classification.jsonl  decline_interviews_manual_classification.jsonl  decline_interviews_safety_attribution_subtype.SUPERSEDED.md  decline_interviews_safety_attribution_subtype.jsonl
data/grounding/: README.md
data/models/: registry.json
data/open_bundle/: README.md  huggingface_dataset_card.md
deploy/systemd/: lsb-backup.service  lsb-backup.timer
docs/: AGENT_PIPELINE.md  BOOTSTRAP_DESIGN.md  DATA_DICTIONARY.md  DECLINE_INTERVIEW_PROTOCOL.md  FRONTEND_DESIGNER_BRIEF.md  FRONTEND_DESIGNER_BRIEF_APPENDIX.md  FRONTEND_REDESIGN_BRAINSTORM.md  LICENSE_COVERAGE.md  PHASE_8_LAUNCH_RUNBOOK.md  PHASE_9_PLANNING_NOTES.md  PROMPT_EVOLUTION_LOG.md  References  SHAKEDOWN_PROTOCOL.md  SME_REVIEW.md  grounding_submission_template.md  methodology_audit.md  prototype-data.js  slicer-prototype.html  type-specimen-preview.html
docs/3rdpartyreviews/: CODEX_INDEPENDENT_AUDIT_ASSESSMENT.md  GROK 2026-04-21-independent-third-party-review.md  Gemini_Opinion_Tokens.md  gemini project_review.md
docs/ExampleCode/: ThiningTraceClean  ThinkingTraceParser
docs/INCIDENTS/: 2026-04-19-test-data-loss.md
docs/briefings/: 2026-04-19-sme-brief.md  2026-04-19-sme-implementation-response.md
docs/proposals/: 2026-04-20-sme-open-questions.md
docs/proposed/: 2026-05-29-tier1-2-activation-runbook.md
docs/status/: 2026-04-19-post-f1-sme-implementation.md  2026-04-20-f2-cda-sme-verdict.md  2026-04-20-f2-t02-architect-plan.md  2026-04-20-shakedown-findings.md  2026-04-21-3rdparty-reviews-architect-eval.md  2026-04-21-3rdparty-reviews-cda-sme-eval.md  2026-04-21-shakedown-findings.md  2026-04-22-b2-backup-architect-verdict.md  2026-04-22-b2-backup-task2-reviewer-verdict.md  2026-04-22-b2-backup-task3-reviewer-verdict.md  2026-04-22-b2-backup-task4-reviewer-verdict.md  2026-04-22-b2-backup-task6-reviewer-verdict.md  2026-04-22-b2-test-restore.md  2026-04-22-phase4a-adapter-fix-verdict.md  2026-04-22-phase4a-kickoff-architect-verdict.md  2026-04-22-phase4a-preflight.md  2026-04-22-phase4a-slate-cda-sme-verdict.md  2026-04-22-phase4a-t1-reviewer-verdict.md  2026-04-22-phase4a-t2-orchestrator-verdict.md  2026-04-22-phase4a-t3-canary-report.md  2026-04-22-phase4a-t3-reviewer-verdict.md  2026-04-22-phase4a-t4-run-report.md  2026-04-22-position-c-replay-verdict.md  2026-04-22-reshakedown-question-cda-sme-verdict.md  2026-04-22-shakedown-findings-cda-sme-verdict.md  2026-04-22-vps-handoff.md  2026-04-23-decline-interview-protocol-sme-verdict.md  2026-04-23-failures-as-findings-architect-verdict.md  2026-04-23-phase4a-completion.md  2026-04-23-phase4a-open-items.md  2026-04-23-phase4a-t4-reviewer-verdict.md  2026-04-23-phase4a-t5-analysis-report.md  2026-04-23-phase4a-t5-cda-sme-verdict.md  2026-04-23-phase4a-t5-reviewer-verdict.md  2026-04-23-phase4a-t6-qa-sweep.md  2026-04-23-phase4a-t6-reviewer-verdict.md  2026-04-23-phase4a-t7-reviewer-verdict.md  2026-04-23-phase4a-task19-reviewer-verdict.md  2026-04-23-phase4a-task23-reviewer-verdict.md  2026-04-23-phase4a-task24-reviewer-verdict.md  (+323 more)
scripts/: analyze.py  backup.py  build_confabulation_classification_seed.py  build_db.py  build_manual_classification_seed.py  build_open_bundle.py  build_safety_subtype_seed.py  check_no_llm_imports.py  collect.py  cost_report.py  discover_models.py  inject_centrality_ci.py  inspect.py  inspect_confabulation_candidates.py  lsb_inspect.py  phase4a1_note_j_crosstab.SUPERSEDED.md  phase4a1_note_j_crosstab.py  preflight.py  prerelease_scan.py  probe_gemini_cap_bump_2026_05_04.py  probe_gemini_fullcycle_2026_05_04.py  probe_gemini_rerun_2026_05_04.py  probe_openrouter_cap_bump_2026_05_04.py  probe_openrouter_fullcycle_2026_05_05.py  publish.py  qa_check.py  rebaseline_corpus.py  recover_phase4a_failures.py  rerun_phi4_phase4b_t2.py  rerun_recursive_decline_check.py  rerun_t3_unexplained_phase4b.py  run_decline_backfill.py  run_phase4a_t4.sh  run_phase4b_variance.py  run_phase6_t13_food.py  run_sensitivity.sh  social_review.py  transcripts.py  validate.py
tests/: test_confabulation_classification.py  test_manual_classification.py  test_ops_dashboard_app.py  test_ops_dashboard_app_static.py  test_ops_dashboard_detail.py  test_ops_dashboard_loader.py  test_ops_dashboard_qa_interpreter.py  test_phase4a1_note_j_crosstab.py  test_run_decline_backfill.py  test_safety_subtype.py  test_smoke.py
tests/cdb_publish/: test_build.py  test_build_domain_json.py  test_derived.py  test_failures.py  test_failures_gap_fill.py  test_lede.py
tests/fixtures/: anthropic_response.json  failures_mixed_sample.jsonl  failures_unclassified_saturation.jsonl  free_list_response.txt  huggingface_response.json  mock_adapter.py  open_bundle_informants_fixture.jsonl  openrouter_response.json  openrouter_response_with_reasoning.json  phase4a_failures_sample.jsonl  phase4a_recovered_sample.jsonl  pile_interview_response.txt  pile_sort_response.json  xai_response.json
tests/scripts/: test_backup.py  (+3 more)
(+295 files in other folders)
