[project]
name = "lsb-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.94.0",
    "langgraph>=1.1.6",
    "python-dotenv>=1.2.2",
    "slack-sdk>=3.41.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
