[project]
name = "lsb"
version = "0.1.0"
description = "Latent Structure Benchmark — corpus lens analysis of LLMs via Cultural Domain Analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Scratch-file dependencies (main.py is the only remaining pre-architecture
    # scratch file). These predate the formal architecture and will be cleaned
    # up when main.py is migrated or removed post-Phase 0.
    "anthropic>=0.94.0",
    "python-dotenv>=1.2.2",
    "slack-sdk>=3.41.0",
    # B2 backup layer (scripts/backup.py). Architect sign-off:
    # docs/status/2026-04-22-b2-backup-architect-verdict.md §1
    "b2sdk>=2.0,<3",
    # Workspace packages
    "cdb-core",
    "cdb-collect",
    "cdb-analyze",
    "cdb-publish",
    "cdb-social",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "types-PyYAML>=6.0",
    "types-requests>=2.31.0",
]

[tool.uv.workspace]
members = [
    "packages/cdb_core",
    "packages/cdb_collect",
    "packages/cdb_analyze",
    "packages/cdb_publish",
    "packages/cdb_social",
]

[tool.uv.sources]
cdb-core = { workspace = true }
cdb-collect = { workspace = true }
cdb-analyze = { workspace = true }
cdb-publish = { workspace = true }
cdb-social = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 100
# Exclude the remaining pre-architecture scratch file from linting.
# main.py will be cleaned up post-Phase 0.
exclude = [
    "main.py",
    "tests/test_smoke.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
# Expose workspace source roots to mypy so that standalone apps (e.g.
# apps/ops_dashboard/) can import workspace packages (cdb_core, etc.)
# without those packages needing a py.typed marker.  This is safe: mypy
# already finds the same files when invoked against packages/ directly.
mypy_path = ["packages/cdb_core", "packages/cdb_collect", "packages/cdb_analyze", "packages/cdb_publish", "packages/cdb_social"]
# Resolve "source file found twice" when running mypy against a standalone
# app directory (e.g. apps/ops_dashboard/) that also appears in the
# workspace tree via mypy_path above.  explicit_package_bases tells mypy
# to anchor all package names to the current working directory, so
# apps/ops_dashboard/lib/loader.py is only ever known as
# apps.ops_dashboard.lib.loader — never as lib.loader.
# See OPS-T3 (task 2026-05-01).
explicit_package_bases = true
# Exclude the remaining pre-architecture scratch file from type checking.
# main.py will be cleaned up post-Phase 0.
exclude = [
    "^main\\.py$",
    "^tests/test_smoke\\.py$",
]

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# streamlit is an optional extra in apps/ops_dashboard/[ops]; not installed
# in the base uv environment.  Ignore missing stubs rather than requiring the
# full ops-extra install on every mypy run.
module = "streamlit"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# atproto (Bluesky AT Protocol client) does not ship py.typed or type stubs.
# Dependency ratified by Mark 2026-05-17 per CLAUDE.md §6 sign-off.
module = "atproto"
ignore_missing_imports = true
